[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
listenfd = "1.0.1"
serde = { version = "1.0.164", features = ["derive"] }
tokio = "1.28.2"
