[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
dotenv = "0.15.0"
listenfd = "1.0.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["time_0_3"] } # used for deserializing time.
serde_json = "1.0.96"
time = "0.3.22"
